$Id$

2016-09-25  Christian Franke  <franke@computer.org>

	AUTHORS: Add Kimihiro Nonaka.

2016-09-25  Kimihiro Nonaka  <...>

	os_netbsd.cpp: Migrate to new dev_interface (ticket #101).
	Add NVMe support (ticket #728).
	Implement netbsd_ata_device::ata_pass_through().
	netbsd_nvme_ioctl.h: New file based on "sys/dev/ic/nvmeio.h" from
	NetBSD kernel sources.
	Makefile.am: Add new file.

2016-09-07  Christian Franke  <franke@computer.org>

	Makefile.am: clean-vc14 targets.

	os_win32.cpp: Decode Windows 10 build number.

	os_win32/smartd_warning.cmd: Use delayed variable expansion.

	os_win32/smartd_mailer.ps1: Use domainname for default sender address.
	os_win32/smartd_mailer.conf.sample.ps1: Update related comment.
	os_win32/smartd_warning.cmd: Remove trailing '\r' from USERDNSDOMAIN.

2016-08-28  Christian Franke  <franke@computer.org>

	os_win32/installer.nsi: Fix quoting of EDITOR shortcuts.

	Send warning mails via PowerShell script on Windows (ticket #731):
	Makefile.am, os_win32/installer.nsi: Add new files.
	os_win32/smartd_mailer.ps1: New PowerShell script using Send-MailMessage
	cmdlet to send mail.
	os_win32/smartd_mailer.conf.sample.ps1: New sample config file.
	os_win32/smartd_warning.cmd: Call new script if configured.
	Improve error handling.  Add setlocal.
	smartd.conf.5.in: Document it.

2016-08-17  Christian Franke  <franke@computer.org>

	AUTHORS: Add Song Liu.

	smartctl.cpp: Reduce scope of 'persistent' flag
	(cppcheck: variableScope).

2016-08-17  Song Liu  <songliubraving@fb.com>

	ataprint.cpp, ataprint.h, smartctl.cpp, smartctl.8.in:
	Add persistent option ',p' to '-s wcreorder,on|off' (ticket #726).

	atacmds.cpp, atacmds.h, ataprint.cpp, ataprint.h, smartctl.cpp,
	smartctl.8.in: Add ability to control ATA drive write cache through
	SCT Feature control.  The new smartctl options are
	'-s wcache-sct,ata|on|off[,p]' and '-g wcache-sct' (ticket #723).

2016-08-06  Christian Franke  <franke@computer.org>
